<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".SignupFragment">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_wave"

        app:layout_constraintBottom_toTopOf="@+id/ed_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
    android:id="@+id/ed_name"
    android:layout_width="330dp"
    android:layout_height="47dp"
    android:layout_marginTop="168dp"
    android:ems="10"
    android:inputType="textPersonName"
    android:hint="@string/FullName"
    android:textColorHint="@color/font"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.493"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/ed_email"
    android:layout_width="330dp"
    android:layout_height="47dp"
    android:layout_marginTop="28dp"
    android:ems="10"
    android:inputType="textEmailAddress"
    android:hint="@string/Email"
    android:textColorHint="@color/font"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.493"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ed_name" />

<EditText
    android:id="@+id/ed_pass"
    android:layout_width="330dp"
    android:layout_height="47dp"
    android:layout_marginTop="36dp"
    android:ems="10"
    android:inputType="textPersonName"
    android:textColorHint="@color/font"
    android:hint="@string/Password"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ed_email" />

<Button
    android:id="@+id/btn_signup"
    android:layout_width="228dp"
    android:layout_height="45dp"
    android:layout_marginTop="52dp"
    android:text="@string/SIGNUP"
    android:backgroundTint="#FFC107"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ed_pass" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="@color/font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup"
        app:layout_constraintVertical_bias="0.483" />
</androidx.constraintlayout.widget.ConstraintLayout>